# course-cli

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  module.yaml  pyproject.toml
docs/: diagrams.md  specification.md
scripts/: pre-commit.sh
src/course_cli/: cli.py  report.py  validate.py  xapi.py
tests/: test_cli.py
