[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "course-cli-LVAAVL" 
version = "0.1.0"
authors = [
  { name="Vadim", email="bot@gmail.com" },
]
description = "CLI-инструмент для структурирования учебных курсов"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0",
    "PyYAML>=6.0"
]

[project.scripts]
course-cli = "course_cli.cli:main"